# aurora-melody-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/ai-melody-generator/: main.py  manifest.json
examples/arpeggiator/: main.py  manifest.json
examples/chord-progression/: main.py  manifest.json
examples/random-melody/: main.py  manifest.json
src/aurora_melody_sdk/: __init__.py  ai_plugin.py  context.py  note.py  plugin.py
src/aurora_melody_sdk/cli/: __init__.py  pack.py
src/aurora_melody_sdk/theory/: __init__.py  chords.py  notes.py  scales.py
src/aurora_melody_sdk/utils/: __init__.py  generators.py  quantize.py
templates/plugin-template/: main.py  manifest.json
tests/: __init__.py  test_note.py  test_plugin.py  test_theory.py  test_utils.py
